@@ -212,7 +212,7 @@ int main(){
 		}
 	}
 
-	printf("static int8_t lut_ctxno_zc[1024] = {\n  ");
+	printf("static char lut_ctxno_zc[1024] = {\n  ");
 	for (i = 0; i < 1023; ++i) {
 		printf("%i, ", lut_ctxno_zc[i]);
 		if(!((i+1)&0x1f))
@@ -221,7 +221,7 @@ int main(){
 	printf("%i\n};\n\n", lut_ctxno_zc[1023]);
 
 	// lut_ctxno_sc
-	printf("static int8_t lut_ctxno_sc[256] = {\n  ");
+	printf("static char lut_ctxno_sc[256] = {\n  ");
 	for (i = 0; i < 255; ++i) {
 		printf("0x%x, ", t1_init_ctxno_sc(i << 4));
 		if(!((i+1)&0xf))
@@ -236,7 +236,7 @@ int main(){
 		}
 	}
 
-	printf("static int8_t lut_ctxno_mag[4096] = {\n  ");
+	printf("static char lut_ctxno_mag[4096] = {\n  ");
 	for (i = 0; i < 4095; ++i) {
 		printf("%i, ", lut_ctxno_mag[i]);
 		if(!((i+1)&0xf))
@@ -245,7 +245,7 @@ int main(){
 	printf("%i\n};\n\n", lut_ctxno_mag[4095]);
 
 	// lut_spb
-	printf("static int8_t lut_spb[256] = {\n  ");
+	printf("static char lut_spb[256] = {\n  ");
 	for (i = 0; i < 255; ++i) {
 		printf("%i, ", t1_init_spb(i << 4));
 		if(!((i+1)&0x1f))
@@ -279,16 +279,16 @@ int main(){
 					(int) (floor((u * u) * pow(2, T1_NMSEDEC_FRACBITS) + 0.5) / pow(2, T1_NMSEDEC_FRACBITS) * 8192.0));
 	}
 
-	printf("static int16_t lut_nmsedec_sig[1 << T1_NMSEDEC_BITS] = {\n  ");
+	printf("static short lut_nmsedec_sig[1 << T1_NMSEDEC_BITS] = {\n  ");
 	dump_array16(&lut_nmsedec_sig, 1 << T1_NMSEDEC_BITS);
 
-	printf("static int16_t lut_nmsedec_sig0[1 << T1_NMSEDEC_BITS] = {\n  ");
+	printf("static short lut_nmsedec_sig0[1 << T1_NMSEDEC_BITS] = {\n  ");
 	dump_array16(&lut_nmsedec_sig0, 1 << T1_NMSEDEC_BITS);
 
-	printf("static int16_t lut_nmsedec_ref[1 << T1_NMSEDEC_BITS] = {\n  ");
+	printf("static short lut_nmsedec_ref[1 << T1_NMSEDEC_BITS] = {\n  ");
 	dump_array16(&lut_nmsedec_ref, 1 << T1_NMSEDEC_BITS);
 
-	printf("static int16_t lut_nmsedec_ref0[1 << T1_NMSEDEC_BITS] = {\n  ");
+	printf("static short lut_nmsedec_ref0[1 << T1_NMSEDEC_BITS] = {\n  ");
 	dump_array16(&lut_nmsedec_ref0, 1 << T1_NMSEDEC_BITS);
 
 	return 0;
